Bug 91335 - MSO2013 Template - Fitness Tracker - Incorrect function value placement in cell
Summary: MSO2013 Template - Fitness Tracker - Incorrect function value placement in cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium minor
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks: Excel-2013-Templates
  Show dependency treegraph
 
Reported: 2015-05-16 19:16 UTC by Jorendc
Modified: 2015-05-19 03:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Comparison screenshot. Left good; right LibreOffice (bad) (16.02 KB, image/png)
2015-05-16 19:16 UTC, Jorendc
Details
Fitness tracker template (99.43 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-05-16 19:37 UTC, Jorendc
Details
Simpler test document (46.93 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-05-19 01:16 UTC, Markus Mohrhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2015-05-16 19:16:09 UTC
Created attachment 115668 [details]
Comparison screenshot. Left good; right LibreOffice (bad)

* Open MS2013 Template - Fitness Tracker: attachment 115661 [details]
* see field 'BMI' under 'About me' (value = 26.60)

(note we use a ',' here in Belgium for decimal separator, so that's not a bug).

Behavior: value 26.60 is left-centered inside the cell. In Excel 2013 it is left-bottom inside the cell.
Comment 1 A (Andy) 2015-05-16 19:35:10 UTC
@Joren: Is this the correct attachment?  It seems to be something else?
Comment 2 Jorendc 2015-05-16 19:37:32 UTC
Created attachment 115669 [details]
Fitness tracker template

Damnit, you are right :-)
Comment 3 A (Andy) 2015-05-16 19:40:14 UTC
(In reply to Jorendc from comment #2)
> Created attachment 115669 [details]
> Fitness tracker template
> 
> Damnit, you are right :-)

Thanks for your very fast reply.  Please see also Bug 91331 and 91330 with the same issue.
Comment 4 A (Andy) 2015-05-16 19:41:52 UTC
Reproducible with LO 4.4.3.2, Win 8.1
Comment 5 Markus Mohrhard 2015-05-19 01:16:46 UTC
Created attachment 115703 [details]
Simpler test document
Comment 6 Markus Mohrhard 2015-05-19 02:19:28 UTC
It took me some time to understand the issue.

The vertical alignment comes from the conditional format that is applied to this cell. The problem is that the conditional format style has the standard style set as parent.

I consider having the standard style as parent for the conditional formatting style in OOXML a bug and will see how I can fix it.
Comment 7 Commit Notification 2015-05-19 03:48:53 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ae89f59fdad8ac5a98ce02ea31cbe55a5048c43

don't use default style as parent for OOXML cond format style, tdf#91335

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-05-19 03:48:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02b6abe87c4a9d3c11f795d36078fcabbbda498b

add test for tdf#91335

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.