don't use default style as parent for OOXML cond format style, tdf#91335

Change-Id: I1388bb5ab71f6f6d174872023f085240f3bff916