sc/source/filter/oox/stylesbuffer.cxx
@@ -3117,9 +3117,12 @@ OUString StylesBuffer::createDxfStyle( sal_Int32 nDxfId ) const
 
         // Create a cell style. This may overwrite an existing style if
         // one with the same name exists.
+        ScStyleSheet& rStyleSheet = ScfTools::MakeCellStyleSheet(
+                *getScDocument().GetStyleSheetPool(), rStyleName, true);
+
+        rStyleSheet.ResetParent();
         SfxItemSet& rStyleItemSet =
-            ScfTools::MakeCellStyleSheet(
-                *getScDocument().GetStyleSheetPool(), rStyleName, true).GetItemSet();
+            rStyleSheet.GetItemSet();
 
         pDxf->fillToItemSet(rStyleItemSet);
     }
